Skip to content

3.0 regression: open directory rewinds playlist

  1. Add some items to playlist.
  2. Open a directory (while playing).

Expected behaviour: Directory is parsed, and first file in directory starts playing.

Actual behaviour: Directory is parsed, but playback switches to the first file in the whole playlist.

Note: Dbus interface was disabled. This bug is not related to MPRIS. It's either a bug in Qt or in playlist core.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information